# mvp-fdtshim-proof-of-concept

./: .gitignore  Cargo.toml  MATCHING.md  mapping.dts  pkgs.nix  run.sh
src/: efi.rs  main.rs  matching.rs  utils.rs
src/protocols/: dt_fixup.rs  mod.rs
src/smbios/: mod.rs
