[package]
name = "uefi-hello-world"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bitflags = "2.5.0"
flat_device_tree = { version = "3.1.0", features = ["pretty-printing"] }
log = "0.4.21"
uefi = { version = "0.28.0", features = ["logger", "panic_handler", "global_allocator", "alloc"] }
zero = "0.1.3"
